YearlyChartFrontend